--- a/manifest.json
+++ b/manifest.json
@@ -19,9 +19,10 @@
   },
   "content_scripts": [
     {
-      "matches": [ "<all_urls>" ],
-      "js": [ "content.js" ],
-      "run_at": "document_idle"
+      "matches": ["<all_urls>"],
+      "js": ["content.js"],
+      "run_at": "document_idle",
+      "all_frames": true
     }
   ]
 }
