--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,18 @@
 {
   "manifest_version": 3,
-  "name": "Selenium POM Recorder",
-  "version": "1.0",
-  "description": "Record user actions on any website and generate Selenium POM Java code with TestNG and Maven.",
-  "permissions": [
-    "activeTab",
-    "storage"
-  ],
-  "host_permissions": [
-    "<all_urls>"
-  ],
-  "background": {
-    "service_worker": "background.js"
-  },
-  "action": {
-    "default_popup": "popup.html",
-    "default_title": "AutomationRecorder"
-  },
+  "name": "BDD XPath Scenario Generator",
+  "version": "2.2.0",
+  "description": "Suggests unique locators for BDD scenarios, captures alerts, and generates Java step definitions.",
+  "permissions": ["storage", "scripting", "activeTab", "windows"],
+  "host_permissions": ["<all_urls>"],
+  "background": { "service_worker": "background.js" },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"],
-      "run_at": "document_idle",
-      "all_frames": true
+      "js": ["content.js"]
     }
-  ]
+  ],
+  "action": {
+    "default_popup": "popup.html"
+  }
 }
